# TechTheTaste-LowLevel

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: PID.c.BFA0A52063DABF41.idx  PID.h.6E741D35F1A46C6B.idx  com.c.8D4D15E746C80E16.idx  com.c.B85EFAEE3AF73694.idx  com.h.1E8CC1455F9FC3CF.idx  encoder.c.6E7643EB23403D45.idx  encoder.h.E4EEE47BF1020974.idx  function.c.DA71B596454E31F6.idx  function.h.23EC844353D55BCA.idx  function.h.678C480C78C3B4BB.idx  main.c.1D9D7E803A308170.idx  main.c.37EA85E1800677CF.idx  main.c.85F346DC66102B70.idx  motion.c.924DF63C7AE4CA68.idx  motion.h.B6BF3250FDB2F7B3.idx  motor.c.7CB8920C94A76F9D.idx  motor.h.630D938DD9C6B860.idx  stepper.c.D741ED227BC04523.idx  stepper.h.4CABF65DF88EEC88.idx
src/: 7  CMakeLists.txt  main.c  test.c
src/action/: CMakeLists.txt  motorpumpsvalve.c  stepper.c
src/action/header/: CMakeLists.txt  motorpumpsvalve.h  stepper.h
src/asserv/: CMakeLists.txt  PID.c  encoder.c  main.c  motion.c  motor.c
src/asserv/header/: CMakeLists.txt  PID.h  encoder.h  motion.h  motor.h
src/com/: CMakeLists.txt  com.c
src/com/header/: CMakeLists.txt  com.h
src/function/: CMakeLists.txt  function.c
src/function/header/: function.h
